--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="icon" href="./images/github-icon.png">
 
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -18,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React App</title>
+  <title>GitFinder</title>
 </head>
 
 <body>
